# bullet-from-a-gun-scoring

./: .gitignore  LICENSE  README.md  pyproject.toml
bullet_from_a_gun_scoring/: __main__.py  settings.py
conf/base/: catalog.yml  parameters_benchmark.yml
src/bullet_from_a_gun_scoring/: __init__.py  pipeline_registry.py
src/bullet_from_a_gun_scoring/pipelines/benchmark/: __init__.py  nodes.py  pipeline.py
tests/pipelines/benchmark/: test_pipeline.py
